# vectordb-etl

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
dags/: hwp_etl_dag.py  vectordb_etl_dag.py
data/: chunks.pkl  documents.pkl  validation_report_20260109_104450.json  validation_report_20260109_111147.json  validation_report_20260109_113022.json
html/: companyIntroEn.html  companyIntroEn2.html  companyIntroEn3.html  companyIntroEn4.html  companyIntroEn5.html  companyIntroKo.html  companyIntroKo2.html  companyIntroKo3.html  companyIntroKo4.html  companyIntroKo5.html  companyIntroVi.html  companyIntroVi2.html  companyIntroVi3.html  companyIntroVi4.html  companyIntroVi5.html  courseInformationEn.html  courseInformationEn2.html  courseInformationEn3.html  courseInformationEn4.html  courseInformationEn5.html  courseInformationKo.html  courseInformationKo2.html  courseInformationKo3.html  courseInformationKo4.html  courseInformationKo5.html  courseInformationVi.html  courseInformationVi2.html  courseInformationVi3.html  courseInformationVi4.html  courseInformationVi5.html  courseIntroEn.html  courseIntroEn2.html  courseIntroEn3.html  courseIntroKo.html  courseIntroKo2.html  courseIntroKo3.html  courseIntroVi.html  courseIntroVi2.html  courseIntroVi3.html  curriculumEn.html  (+11 more)
modules/: __init__.py  chunker.py  config.py  embeddings.py  html_loader.py  hwp_loader.py  milvus_store.py  quality_monitor.py  search_utils.py  text_cleaner.py
test/: debug_collections.py  debug_hwp_chunks.py  find_curriculum.py  test_hwp5txt.py  test_milvus_connection.py  test_no_filter.py  test_search_direct.py
